@@ -1,3 +1,4 @@
+  - fix quoting of values in smarty_function_popup() (messju)
   - fix handling of hidden sections in Config_File (messju)
   - add handling of resources for {config_load} (messju)
   - fix bug when using arrays with tr_attr and td_attr in {html_table} (messju)
